--- a/css/styles.css
+++ b/css/styles.css
@@ -815,7 +815,7 @@ body {
 .portfolio-content {
 }
 
-.portfolio-section {
+.portfolio {
 	padding-top: 94px;
 	padding-bottom: 94px;
 
@@ -825,17 +825,17 @@ body {
 .portfolio-title {
 }
 
-.portfolio-filter {
+.filter {
 	display: flex;
 	justify-content: center;
 	gap: 8px;
 	margin-bottom: 50px;
 }
 
-.filter-item {
+.filter__item {
 }
 
-.filter-button {
+.filter__button {
 	padding: 6px 22px;
 
 	font-weight: 500;
@@ -851,52 +851,52 @@ body {
 	background-color 250ms var(--timing-function),
 	box-shadow 250ms var(--timing-function);
 }
-.filter-button:hover,
-.filter-button:focus {
+.filter__button:hover,
+.filter__button:focus {
 	color: var(--tertiary-text-color);
 	background-color: var(--accent-color);
 	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
 		0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-list {
+.cards {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 30px;
 	/* margin: -15px; */
 }
 
-.portfolio-item {
+.cards__item {
 	/* flex-basis: calc(100% / 3 - 30px); */
 	/* margin: 15px; */
 }
-/* .portfolio-item:not(:nth-child(3n)) {
+/* .cards__item:not(:nth-child(3n)) {
 	margin-right: 30px;
 }
-.portfolio-item:not(:nth-last-child(-n + 3)) {
+.cards__item:not(:nth-last-child(-n + 3)) {
 	margin-bottom: 30px;
 } */
 
-.portfolio-link {
+.cards__link {
 	display: block;
 	
 	transition: box-shadow 250ms var(--timing-function); 
 }
-.portfolio-link:hover,
-.portfolio-link:focus {
+.cards__link:hover,
+.cards__link:focus {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 
-.portfolio-thumb {
+.cards-thumb {
 	position: relative;
 
 	overflow: hidden;
 }
 
-.portfolio-img {}
+.cards__img {}
 
-.portfolio-overlay {
+.cards-overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -909,12 +909,12 @@ body {
 	transform: translateY(100%);
 	transition: transform 250ms var(--timing-function);
 }
-.portfolio-link:hover .portfolio-overlay,
-.portfolio-link:focus .portfolio-overlay {
+.cards__link:hover .cards-overlay,
+.cards__link:focus .cards-overlay {
 	transform: translateY(0px);
 }
 
-.portfolio-text {
+.cards-overlay__text {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -929,7 +929,7 @@ body {
 	color: var(--tertiary-text-color);
 }
 
-.border-basket{
+.cards-wapper{
 	padding: 20px 24px;
 
 	border-bottom: 1px solid var(--border-color);
@@ -937,7 +937,7 @@ body {
 	border-left: 1px solid var(--border-color);
 }
 
-.portfolio-name {
+.cards__name {
 	font-weight: 700;
 	font-size: 18px;
 	line-height: 2;
@@ -945,7 +945,7 @@ body {
 	color: var(--primary-text-color);
 }
 
-.portfolio-descrpt {
+.cards__descrpt {
 	font-size: 16px;
 	line-height: 1.875;
 	letter-spacing: 0.03em;
