--- a/css/styles.css
+++ b/css/styles.css
@@ -928,7 +928,7 @@ body {
 	color: var(--tertiary-text-color);
 }
 
-.cards-wapper{
+.cards-wrapper{
 	padding: 20px 24px;
 
 	border-bottom: 1px solid var(--border-color);
