--- a/sass/components/portfolio-section/_filter.scss
+++ b/sass/components/portfolio-section/_filter.scss
@@ -22,8 +22,8 @@
 
 	transition: color 250ms $timing-function, background-color 250ms $timing-function, box-shadow 250ms $timing-function;
 
-	.filter__button:hover,
-	.filter__button:focus {
+	&:hover,
+	&:focus {
 		color: $tertiary-text-color;
 		background-color: $accent-color;
 		box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
