--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,4 @@
 @import "./layout/main-content";
 @import "./layout/footer";
 @import "./layout/backdrop-modal";
+@import "./layout/main-portfolio";
