--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -40,6 +40,6 @@
 	color: $footer-color;
 }
 
-@import "../components/footer-social";
+@import "./footer-social";
 
-@import "../components/footer-form";
+@import "./footer-form";
