--- a/sass/layout/_main-portfolio.scss
+++ b/sass/layout/_main-portfolio.scss
@@ -11,5 +11,5 @@
 .portfolio-title {
 }
 
-@import "../components/portfolio-section/filter";
-@import "../components/portfolio-section/cards";
+@import "./portfolio-section/filter";
+@import "./portfolio-section/cards";
