--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,16 @@
 @import "./components/logo";
 
 @import "./layout/header";
+
 @import "./layout/main-content";
+@import "./layout/main-sections/hero";
+@import "./layout/main-sections/benefits";
+@import "./layout/main-sections/example";
+@import "./layout/main-sections/team";
+@import "./layout/main-sections/clients";
+
 @import "./layout/footer";
-@import "./layout/backdrop-modal";
+
+@import "./components/backdrop-modal";
+
 @import "./layout/main-portfolio";
